# fcrypt

./: .gitignore  LICENSE.md  README.md  setup.cfg  setup.py
src/: encryptor.py  fcrypt.py  logger.py
