[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[metadata]
name = fcrypt
version = 1.0.0
description = "Encrypts/Decrypts provided files"
author = "h4sh"


[options]
install-requires = 
    click <= 8.0.0
    cryptography <= 4.0.0

[options.entry_points]
console-scripts = 
    fcrypt = fcrypt:exec